# substreams-solana

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: copilot-instructions.md
bonk-swap/: Cargo.toml  Makefile  README.md  substreams.yaml
clickhouse-contracts/: Cargo.toml  substreams.yaml
clickhouse-solana-accounts/: Cargo.toml  schema.2.mv.accounts.sql  schema.3.mv.set_authority.sql  substreams.yaml
clickhouse-solana-balances/: Cargo.toml
clickhouse-solana-contracts/: Makefile  README.md
clickhouse-solana-dex/: Cargo.toml  Makefile  README.md  schema.0.blocks.sql  schema.0.dictionary.verified_tokens.sql  schema.0.functions.helpers.sql  schema.0.functions.program_names.sql  schema.0.functions.programs.sql  schema.0.functions.tokens.sql  schema.0.template.sql  schema.0.verified_programs.sql  schema.1.events.jupiter.sql  schema.1.events.jupiter.swaps.sql  schema.1.events.pumpfun-amm.sql  schema.1.events.pumpfun.sql  schema.1.events.pumpfun.swaps.sql  schema.1.events.raydium-amm-v4.sql  schema.1.events.raydium-launchpad.sql  schema.1.events.raydium.sql  schema.1.events.raydium.swaps.sql  schema.1.events.spl_token_metadata.DEPRECATE  schema.1.events.spl_token_metadata.sql  schema.1.jupiter.sql  schema.1.pumpfun-amm.sql  schema.1.pumpfun.sql  schema.1.raydium-amm-v4.sql  schema.2.view.swaps.sql  schema.3.view.ohlc_prices.sql  schema.3.view.pool_activity_summary.sql  schema.3.view.swaps.raydium.TODO  schema.4.projections.ohlc_prices.TODO  schema.4.view.pool_activity_summary.sql  substreams.yaml
clickhouse-solana-dex/examples/: Add COLUMN "program_name".sql  OHLC Prices.sql  PROJECTION.sql  Swaps.sql  add INDEX to swaps.sql
clickhouse-solana-dex/src/: enums.rs  jupiter.rs  lib.rs  meteora_amm.rs  meteora_daam.rs  meteora_dllm.rs  pumpfun.rs  pumpfun_amm.rs  raydium_amm.rs  raydium_amm_v4.rs  raydium_clmm.rs  raydium_cpmm.rs  raydium_launchpad.rs  spl_token_metadata.rs
clickhouse-solana-dexs/: Cargo.toml  README.md  schema.1.events.raydium.sql  substreams.yaml
clickhouse-solana-metadata/: Cargo.toml  schema.1.table.metaplex.sql  substreams.yaml
clickhouse-solana-metadata/src/: lib.rs  metaplex.rs  spl_token.rs
clickhouse-solana-tokens/: Cargo.toml  Makefile  README.md  schema.0.blocks.sql  schema.0.dictionary.sql  schema.0.functions.helpers.sql  schema.0.functions.tokens.sql  schema.0.templates.sql  schema.1.events.accounts.sql  schema.1.events.balance_changes.sql  schema.1.events.mints.sql  schema.1.events.native_token.sql  schema.1.events.spl_memo.sql  schema.1.events.spl_token.sql  schema.1.events.spl_token_balances.sql  schema.1.events.spl_token_metadata.TODO  schema.1.events.spl_token_supply.TODO  schema.1.events.spl_token_transfers.sql  schema.1.events.spl_transfers.sql  schema.1.events.transfers.sql  schema.1.table.metaplex.sql  schema.1.table.spl_token.sql  schema.2.mv.accounts.sql  schema.2.mv.accounts_by_date.sql  schema.2.mv.balances.sql  schema.2.mv.balances_native.sql  schema.2.mv.metadata.sql  schema.2.mv.mints.sql  schema.2.mv.transfers.sql  schema.2.mv.transfers_activity.sql  schema.2.view.balances.sql  schema.2.view.spl-metadata.TODO  schema.2.view.spl-metadata.sql  schema.2.views.account_extensions.sql  schema.2.views.accounts.sql  schema.2.views.balances.sql  schema.2.views.metadata.sql  schema.2.views.mints.sql  schema.3.mv.accounts_by_date.sql  schema.3.mv.metadata_metaplex.sql  (+13 more)
clickhouse-solana-transactions/: README.md  substreams.yaml
clickhouse-solana-transfers/: Cargo.toml  Makefile  substreams.yaml
clickhouse-tokens/: Cargo.toml  (+7 more)
common/: Cargo.toml
common/src/: clickhouse.rs  lib.rs  solana.rs
dex/jupiter/v6/: Cargo.toml  substreams.yaml
dex/obric-v3/: Cargo.toml  substreams.yaml
dex/obric-v3/src/: lib.rs
dex/okx-dex/: Cargo.toml  substreams.yaml
dex/okx-dex/src/: lib.rs
dex/pancakeswap/: Cargo.toml  substreams.yaml
dex/solfi-v1/: Cargo.toml  substreams.yaml
dex/solfi-v1/src/: lib.rs
dex/solfi-v2/: Cargo.toml  substreams.yaml
dex/solfi-v2/src/: lib.rs
metaplex/: Cargo.toml  Makefile  README.md  substreams.yaml
metaplex/src/: lib.rs  metadata.rs
native-token/: Cargo.toml  Makefile  README.md  substreams.yaml
native-token/src/: lib.rs  system.rs  transfers.rs
native/vote/: Cargo.toml  substreams.yaml
native/vote/src/: lib.rs  vote.rs
raydium-clmm/: Cargo.toml  Makefile  README.md  substreams.yaml
raydium-clmm/src/: lib.rs
raydium-cpmm/: Cargo.toml  Makefile  README.md  substreams.yaml
raydium-cpmm/src/: lib.rs
raydium-launchpad/: Cargo.toml  README.md
raydium-launchpad/src/: lib.rs
solana-balances/: Cargo.toml
solana-balances/clickhouse/: substreams.yaml
solana-balances/postgres/: .gitignore  substreams.yaml
solana-balances/src/: spl_token.rs
solana-clock-store/: Cargo.toml  Makefile  README.md  substreams.yaml
solana-clock-store/src/: lib.rs
spl-token/: Cargo.toml  Makefile  README.md  substreams.yaml
spl-token-accounts/: Cargo.toml  Makefile  README.md  substreams.yaml
spl-token-accounts/src/: lib.rs
spl-token-balances/: Cargo.toml  Makefile  README.md  substreams.yaml
spl-token-balances/src/: lib.rs
spl-token-initialize/: Cargo.toml  Makefile  README.md  substreams.yaml
spl-token-initialize/src/: lib.rs
spl-token-mints/: Cargo.toml  README.md  substreams.yaml
spl-token-mints/src/: lib.rs
spl-token-permissions/: Cargo.toml  README.md  substreams.yaml
spl-token-permissions/src/: lib.rs
spl-token-transfers/: Cargo.toml  Makefile  README.md  substreams.yaml
spl-token-transfers/src/: lib.rs
spl-token/src/: accounts.rs  balances.rs  extensions.rs  lib.rs  memo.rs  metadata.rs  mints.rs  permissions.rs  transfers.rs
spl/token/: Cargo.toml  Makefile  substreams.yaml
spl/token-2022/: Cargo.toml  substreams.yaml
spl/token-2022/src/: balances.rs  lib.rs
spl/token-common/: Cargo.toml
spl/token-common/src/: accounts.rs  balances.rs  lib.rs  metadata.rs  mints.rs  permissions.rs  transfers.rs
spl/token-lending/: Cargo.toml  Makefile  substreams.yaml
spl/token-lending/src/: lib.rs
spl/token/src/: accounts.rs  lib.rs  memo.rs  metadata.rs
(+621 files in other folders)
