[workspace]
members = [
  # DatabaseChanges
  "svm-balances",
  "svm-dex",
  "svm-transfers",
  "svm-accounts",
  "svm-metadata",
  "svm-staking",
  "svm-nfts",

  # Tokens
  "spl/token-common",
  "spl/token",
  "spl/token-2022",
  "spl/token-swap",
  "spl/token-lending",
  "native/system",
  "native/stake",
  "native/vote",

  # DEXs
  "dex/pumpfun/bonding_curve",
  "dex/pumpfun/amm",
  "dex/jupiter/v4",
  "dex/jupiter/v6",
  "dex/raydium/amm-v4",
  "dex/raydium/clmm",
  "dex/raydium/cpmm",
  "dex/raydium/launchpad",
  "metaplex",
  "dex/bonk-swap",
  "dex/orca/whirlpool",
  "dex/pumpswap",
  "dex/moonshot",
  "dex/pancakeswap",
  "dex/lifinity",
  "dex/meteora/amm",
  "dex/meteora/daam",
  "dex/meteora/dllm",
  "dex/phoenix",
  "dex/openbook",
  "dex/stabble",
  "dex/darklake",
  "dex/dumpfun",
  "dex/goonfi",
  "dex/heaven",
  "dex/plasma",
  "dex/saros",
  "dex/aldrin",
  "dex/boop",
  "dex/byreal",
  "dex/dflow",
  "dex/drift",
  "dex/obric-v2",
  "dex/obric-v3",
  "dex/okx-dex",
  "dex/sanctum",
  "dex/serum",
  "dex/solfi-v1",
  "dex/solfi-v2",

  # NFT Marketplaces
  "nft/magiceden/m2",
  "nft/magiceden/m3",
  "nft/tensor",

  # Staking
  "staking/marinade",

  # Common
  "proto",
  "common",
]
resolver = "2"

[workspace.package]
description = "Solana Substreams"
edition = "2021"
version = "0.0.0"
license = "Apache-2.0"

[workspace.dependencies]
bs58 = "0.5.1"
substreams = "0.7.3"
substreams-abis = "0.7.12"
substreams-solana = "0.14.2"
substreams-solana-idls = { git = "https://github.com/pinax-network/substreams-solana-idls", tag = "v1.0.0" }
spl-token = "9.0.0"
substreams-solana-program-instructions = "0.3"
substreams-database-change = "4.0.0"
prost = "0.13"
prost-types = "0.13"

[profile.release]
lto = true
