[package]
name = "solana-contracts"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams-database-change = "2.0"
common = { path = "../common" }
