[package]
name = "common"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-database-change = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
proto = { path = "../proto" }
base64 = "0.22.1"
