[package]
name = "metaplex"
description = "Metaplex Token Metadata"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
mpl-token-metadata = "5.1.1"
borsh = "0.10"
