[package]
name = "native-token"
description = "Native Token"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-program-instructions = { workspace = true }
solana-program = "2.3.0"
bincode = { version = "2.0.1", features = ["serde"] }
proto = { path = "../proto" }
common = { path = "../common" }
