[package]
name = "raydium_clmm"
description = "Raydium CLMM"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
