[package]
name = "db-solana-balances"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-database-change = { workspace = true }

proto = { path = "../proto" }
common = { path = "../common" }
