[package]
name = "spl-token-permissions"
description = "SPL Token permissions"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-program-instructions = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
