[package]
name = "spl-token"
description = "SPL Token"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-program-instructions = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
