[package]
name = "okx-dex"
description = "OKX DEX v2"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-idls = { workspace = true }
proto = { path = "../../proto" }
common = { path = "../../common" }
