[package]
name = "solfi-v1"
description = "SolFi v1 DEX"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-idls = { workspace = true }
proto = { path = "../../proto" }
common = { path = "../../common" }
