[package]
name = "spl-token-2022"
description = "SPL Token-2022"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
proto = { path = "../../proto" }
spl-token-common = { path = "../token-common" }
