[package]
name = "spl-token-lending"
description = "SPL Token Lending"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
proto = { path = "../../proto" }
common = { path = "../../common" }
